# work-agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  concept.md  install.ps1  pyproject.toml  start.ps1  start.py
.claude/: global.md
app/: __init__.py  cli.py  config.py
app/agents/: __init__.py  blog_agent.py  capture_agent.py  career_bullet_agent.py  context_builder.py  curator_agent.py  distill_agent.py  (+11 more)
docs/: ai_fallback.md  architecture.md  loop-test-2026-06-24.md  obsidian-integration-proposal.md  todo-2026-06-25.md
scripts/: register-local.ps1  register-schedules.ps1  run-bot-service.ps1  run-nightly-safe.ps1  sync-vault.ps1  update-work-agent.ps1
tests/: conftest.py  test_assistant.py  test_assistant_bot.py  test_blog_repository.py  test_capture_agent.py  test_capture_session.py  test_career_bullet_agent.py  test_cli.py  test_collector.py  test_context_pack.py  test_curator_agent.py  test_digest_service.py  test_doc_agents.py  test_draft_reviser.py  test_git_source.py  test_json_utils.py  test_list.py  test_llm_factory.py  test_llm_fallback.py  test_llm_http.py  test_local_doc_source.py  test_markdown_storage.py  test_messaging_bot.py  test_messaging_router.py  test_nightly_distill.py  test_notion_blocks.py  test_notion_mapping.py  test_notion_mock.py  test_notion_source.py  test_notion_sync.py  test_open_loops_agent.py  test_pipeline_improvements.py  test_print_schedule.py  test_prompts.py  test_publish_done.py  test_services.py  test_smoke_pipeline.py  test_telegram_media.py  test_tistory_exporter.py  test_todo_agent.py  (+2 more)
(+83 files in other folders)
