[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "work-agent"
version = "0.1.0"
description = "개인 작업 기록 기반 기술 블로그 초안 생성 CLI (Work Agent - Blog Agent MVP)"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "typer>=0.12",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-frontmatter>=1.1",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
notion = ["notion-client>=2.2"]
dev = [
    "pytest>=8.0",
    "notion-client>=2.2",
]

[project.scripts]
work-agent = "app.cli:app"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
"app.prompts" = ["*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
